[gd_scene load_steps=12 format=3 uid="uid://butts5geqiee5"]

[ext_resource type="Script" path="res://src/game/enemies/base/enemy.gd" id="1_1hpwl"]
[ext_resource type="PackedScene" uid="uid://jl3lbb3ikuhm" path="res://src/game/pickups/money/money.tscn" id="2_cjfdy"]
[ext_resource type="Script" path="res://src/scripts/states/state_machine.gd" id="3_7biin"]
[ext_resource type="Script" path="res://src/game/enemies/base/attack_manager.gd" id="3_8qs2j"]
[ext_resource type="Script" path="res://src/scripts/components/hurt_box_component.gd" id="3_54b25"]
[ext_resource type="Script" path="res://src/scripts/components/health_bar_component.gd" id="5_cqd0b"]
[ext_resource type="Script" path="res://src/scripts/components/hurt_component.gd" id="5_f0sbc"]
[ext_resource type="AudioStream" uid="uid://bxikvxoe3q136" path="res://assets/sound/hit_monster.wav" id="6_hvyip"]
[ext_resource type="Script" path="res://src/scripts/components/spawner_component.gd" id="8_q5w0d"]
[ext_resource type="Texture2D" uid="uid://b2c3e1l13v4j7" path="res://assets/textures/ui/health_bar/health_bar_under.png" id="9_ptn0d"]
[ext_resource type="Texture2D" uid="uid://dp3455beb64d4" path="res://assets/textures/ui/health_bar/health_bar_progress.png" id="10_orxg7"]

[node name="Enemy" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 5
motion_mode = 1
script = ExtResource("1_1hpwl")
money = ExtResource("2_cjfdy")

[node name="AttackManager" type="Node2D" parent="."]
script = ExtResource("3_8qs2j")

[node name="HandPosition" type="Marker2D" parent="AttackManager"]

[node name="Sprite" type="Sprite2D" parent="."]

[node name="CollisionShape" type="CollisionShape2D" parent="."]
debug_color = Color(1, 0.396078, 0, 0.117647)

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("3_7biin")

[node name="HurtboxComponent" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 0
script = ExtResource("3_54b25")

[node name="AttackRange" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="HurtComponent" type="Node" parent="." node_paths=PackedStringArray("player_sfx", "hurtbox_component", "sprite", "actor")]
script = ExtResource("5_f0sbc")
hit_player_sfx = ExtResource("6_hvyip")
player_sfx = NodePath("../EnemySfx")
hurtbox_component = NodePath("../HurtboxComponent")
sprite = NodePath("../Sprite")
actor = NodePath("..")

[node name="SpawnerComponent" type="Node2D" parent="."]
script = ExtResource("8_q5w0d")

[node name="EnemySfx" type="AudioStreamPlayer" parent="."]

[node name="HealthBarComponent" type="TextureProgressBar" parent="."]
offset_right = 19.0
offset_bottom = 5.0
value = 100.0
texture_under = ExtResource("9_ptn0d")
texture_progress = ExtResource("10_orxg7")
script = ExtResource("5_cqd0b")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
